--- a/shoes/pom.xml
+++ b/shoes/pom.xml
@@ -32,6 +32,13 @@
     <finalName>shoes</finalName>  
 <plugins>
 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webXml>C:\Users\JARVIS\Desktop\MVN080518\Mavenrepo\shoes\src\main\webapp\WEB-INF\web.xml</webXml>
+                </configuration>
+            </plugin>
+<plugin>
 <groupId>org.codehaus.mojo</groupId>
 <artifactId>tomcat-maven-plugin</artifactId>
 <configuration>
