--- a/shoes/pom.xml
+++ b/shoes/pom.xml
@@ -35,7 +35,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
-                    <webXml>C:\Users\JARVIS\Desktop\MVN080518\Mavenrepo\shoes\src\main\webapp\WEB-INF\web.xml</webXml>
+                    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
                 </configuration>
             </plugin>
 <plugin>
